made some changes

--- a/Castaway - Figma/index.html
+++ b/Castaway - Figma/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/styles.css">
 
     <title>Castaway - Figma</title>
 </head>
@@ -211,10 +211,77 @@
             <h1>Latest episodes</h1>
             <button>View all episodes</button>
         </div>
-        <section id="about">
-        </section>
-        <section id="contact">
-        </section>
+        <div class="wrapper2">
+            <div class="card">
+                <img src="card1.png" alt="">
+                <div class="card-text">
+                    <h6>Gear</h6>
+                    <h5>Episode 3</h5>
+                    <h3>Should you get outboard audio gear?</h3>
+                    <p>Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here's our
+                        reasons
+                        on why you might want to consider picking something up.</p>
+                    <button>View Episode Details</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="card2.png" alt="">
+                <div class="card-text">
+                    <h6>Tips & Tricks</h6>
+                    <h5>Episode 2</h5>
+                    <h3>Mic tricks to take you to the next level</h3>
+                    <p>Stop rolling with those default settings on your mic. These small tweaks will take you from
+                        sounding good
+                        to great.</p>
+                    <button>View Episode Details</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="card3.png" alt="">
+                <div class="card-text">
+                    <h6>Gear</h6>
+                    <h5>Episode 1</h5>
+                    <h3>The best microphone under $200</h3>
+                    <p>With so many microphones on the market, how are you supposed to know what’s the best? Take a look
+                        at our
+                        top picks.</p>
+                    <button>View Episode Details</button>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper3">
+            <div class="wrapper3-texts">
+                <img class="iconn" src="icon.png" alt="">
+                <h4>Meet your host</h4>
+                <h1>Jacob Paulaner</h1>
+                <p class="p1">Jacob has a background in audio engineering, and has been podcasting since the early days.
+                </p>
+                <p class="p2">He’s here to help you level up your game by sharing everything he’s learned along the way.
+                </p>
+            </div>
+            <img src="bro2.png" alt="">
+        </div>
+        <div class="submit-log">
+            <div class="submit">
+                <div class="submit-texts">
+                    <h5>Email Newsletter</h5>
+                    <h1>Subscribe for updates</h1>
+                </div>
+            </div>
+            <img src="lineee.png" alt="">
+        </div>
+        <!-- <div class="cards">
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                    <div class="cardd"></div>
+                </div> -->
+        </div>
+    </main>
     </main>
     <footer style="background-color: #333;">
         <svg width="1400" height="438" viewBox="0 0 1400 438" fill="none" xmlns="http://www.w3.org/2000/svg">
